--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Telegraph bot",
   "description": "A bot to upload telegraph",
-  "repository": "https://github.com/Jijinr/TGraph-Bot",
+  "repository": "https://github.com/IzzyLord/TGraph-Bot",
   "logo": "https://telegra.ph/file/b57c89e0b2d2f06f8aa4e.jpg",
   "keywords": ["telegram", "telegraph", "telegram bot"],
   "env": {
